fixes z-index of header to 99

--- a/public/css/blog_template_stylesheet.css
+++ b/public/css/blog_template_stylesheet.css
@@ -23,7 +23,7 @@ div.header {
   height: 38px;
   text-align: center;
   top: 0;
-  z-index: 3;
+  z-index: 99;
 }
 div.header span.title {
   color: white;
